<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="1sp">

    <android.support.v7.widget.CardView
        android:id="@+id/overview_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:elevation="4dp"
        app:cardCornerRadius="8sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image"
                android:layout_width="50sp"
                android:layout_height="50dp"
                android:padding="12sp"
                android:src="@drawable/ic_apps" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8sp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@string/font_family_regular"
                    android:maxLines="2"
                    android:text="@string/most_contacted_person"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/launchCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_family_light"
                    android:text="@string/launch_count"
                    android:textSize="14sp"
                    android:visibility="gone" />

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:fontFamily="@string/font_family_light"
                    android:maxLines="2"
                    android:padding="8sp"
                    android:text="Kevin"
                    android:textSize="16sp" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
