<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_screen_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WHITE"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.manifest.fomo.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <android.support.v7.widget.CardView
        android:id="@+id/todaysPhoneUsageCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:elevation="@dimen/default_elevation"
        android:transitionName="@string/transition"
        app:cardCornerRadius="@dimen/default_cardCornerRadius">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@string/font_family_regular"
                android:paddingEnd="@dimen/default_padding"
                android:paddingStart="@dimen/default_padding"
                android:paddingTop="@dimen/default_padding"
                android:text="@string/todays_phone_usage"
                android:textSize="@dimen/default_text_size" />


            <TextView
                android:id="@+id/todaysPhoneUsage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@string/font_family_medium"
                android:padding="@dimen/default_padding"
                android:text="0 min"
                android:textColor="@color/RED"
                android:textSize="@dimen/emphasis_text_size"
                android:textStyle="bold"
                android:visibility="gone" />


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:elevation="@dimen/default_elevation"
        app:cardBackgroundColor="@color/WHITE"
        app:cardCornerRadius="@dimen/default_cardCornerRadius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@string/font_family_regular"
                android:paddingEnd="@dimen/default_padding"
                android:paddingStart="@dimen/default_padding"
                android:paddingTop="@dimen/default_padding"
                android:text="@string/fomo_score"
                android:textSize="@dimen/default_text_size" />

            <TextView
                android:id="@+id/todaysScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@string/font_family_medium"
                android:padding="@dimen/default_padding"
                android:text="0"
                android:textColor="@color/RED"
                android:textSize="@dimen/emphasis_text_size"
                android:textStyle="bold"
                android:visibility="gone" />

            <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                android:id="@+id/roundCornerProgress"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginBottom="4sp"
                android:layout_marginEnd="8sp"
                android:layout_marginStart="8sp"
                android:layout_marginTop="4sp"
                app:rcBackgroundColor="@color/GREY"
                app:rcBackgroundPadding="2sp"
                app:rcMax="150"
                app:rcProgress="1"
                app:rcProgressColor="@color/BLUE"
                app:rcRadius="8sp" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top">

            <ImageView
                android:id="@+id/helpIV"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:padding="8sp"
                android:src="@drawable/ic_help" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:elevation="@dimen/default_elevation"
        app:cardCornerRadius="@dimen/default_cardCornerRadius">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family_light"
                android:padding="@dimen/default_padding"
                android:text="@string/overview_header"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/overview_recycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="2sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
