<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/WHITE"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ToolBarStyle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@string/font_family_medium"
                android:text="@string/app_name"
                android:textColor="@color/BLACK"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:elevation="@dimen/default_elevation"
        android:transitionName="@string/transition"
        app:cardCornerRadius="@dimen/default_cardCornerRadius">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@string/font_family_regular"
                android:paddingEnd="@dimen/default_padding"
                android:paddingStart="@dimen/default_padding"
                android:paddingTop="@dimen/default_padding"
                android:text="@string/todays_phone_usage"
                android:textSize="@dimen/default_text_size" />


            <TextView
                android:id="@+id/todaysPhoneUsage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@string/font_family_medium"
                android:padding="@dimen/default_padding"
                android:text="10 hrs 10 mins"
                android:textColor="@color/RED"
                android:textSize="@dimen/emphasis_text_size"
                android:textStyle="bold"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@color/RED"
                android:indeterminateTintMode="src_atop"
                android:padding="@dimen/default_padding" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/helpIV"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:padding="8sp"
                android:src="@drawable/ic_help" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:elevation="@dimen/default_elevation"
        app:cardCornerRadius="@dimen/default_cardCornerRadius">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/detailed_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2sp"
            android:layout_marginRight="2sp" />


    </android.support.v7.widget.CardView>

</LinearLayout>
