<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="4sp"
    android:orientation="vertical"
    android:padding="1sp">

    <android.support.v7.widget.CardView
        android:id="@+id/overview_cardview"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:elevation="@dimen/default_elevation"
        android:transitionName="@string/transition"
        app:cardCornerRadius="@dimen/default_cardCornerRadius">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family_regular"
                android:padding="@dimen/default_padding"
                android:text="Most Contacted Person"
                android:textColor="@color/WHITE"
                android:textSize="@dimen/default_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8sp"
                    android:src="@drawable/ic_contacts" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_family_medium"
                    android:maxLines="3"
                    android:padding="@dimen/default_padding"
                    android:text="Kevin"
                    android:textColor="@color/WHITE"
                    android:textSize="@dimen/default_text_size"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>