<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/WHITE"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ToolBarStyle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@string/font_family_medium"
                android:text="@string/app_developers"
                android:textColor="@color/BLACK"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4sp">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:elevation="4dp"
            app:cardCornerRadius="8sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_family_light"
                    android:padding="@dimen/default_padding"
                    android:text="@string/connect_on_linkedin"
                    android:textStyle="bold" />


                <android.support.v7.widget.CardView
                    android:id="@+id/cardviewKevin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:elevation="4dp"
                    app:cardCornerRadius="8sp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50sp"
                            android:layout_height="50sp"
                            android:padding="12sp"
                            android:src="@drawable/ic_apps" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:padding="8sp">

                            <TextView
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@string/font_family_regular"
                                android:maxLines="2"
                                android:text="Kevin Jain"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>


                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cardviewSemil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:elevation="4dp"
                    app:cardCornerRadius="8sp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50sp"
                            android:layout_height="50sp"
                            android:padding="12sp"
                            android:src="@drawable/ic_apps" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:padding="8sp">

                            <TextView
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@string/font_family_regular"
                                android:maxLines="2"
                                android:text="Semil Jain"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>


                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cardviewPushkar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:elevation="4dp"
                    app:cardCornerRadius="8sp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50sp"
                            android:layout_height="50sp"
                            android:padding="12sp"
                            android:src="@drawable/ic_apps" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:padding="8sp">

                            <TextView
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@string/font_family_regular"
                                android:maxLines="2"
                                android:text="Pushkar Kurhekar"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>


                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>


        </android.support.v7.widget.CardView>
    </LinearLayout>


</LinearLayout>